--- a/Pokemine/src/main/resources/application.properties
+++ b/Pokemine/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Pokemine
+spring.datasource.url=jdbc:sqlserver://SWD-2325-05\\SQLEXPRESS:1433;databaseName=pokemon_db_new;encrypt=false;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=Its-2024
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
