scrittura application properties per connessione db (ognuno deve modificarle con le sue e poi lo mettiamo su git ignore)

--- a/Pokemine/src/main/resources/application.properties
+++ b/Pokemine/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+# DA MODIFICARE PER TUTTI E POI METTERE SU GIT IGNORE #
 spring.application.name=Pokemine
-spring.datasource.url=jdbc:sqlserver://SWD-2325-05\\SQLEXPRESS:1433;databaseName=pokemon_db_new;encrypt=false;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://DESKTOP-421NLFC\\SQLEXPRESS:1433;database=pokemon_db_new;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=Its-2024
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
