--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 /.metadata/
-**/application.properties
 .idea
 */bin/*
 
-HELP.md
+**/HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
